# DGS

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py  test.py  test_train.py
.github/workflows/: build_and_publish_wheels.yaml
csrc/: ext.cpp
csrc/include/: dgs_decode.h  dgs_encode.h  dgs_error.h  dgs_format.h  dgs_gaussians.h  dgs_global.h  dgs_log.h  mgs_decode.h  mgs_encode.h  mgs_gaussians.h
csrc/src/: dgs_decode.c  dgs_encode.c  dgs_error.c  dgs_gaussians.c  mgs_decode.c  mgs_encode.c  mgs_error.c  mgs_gaussians.c
csrc/src/mgs_diff_renderer/: mgs_diff_renderer.cpp
csrc/src/mgs_diff_renderer/cuda/: mgs_dr_backward.cu  mgs_dr_forward.h
mgs/: __init__.py  ext.cpp
mgs/diff_renderer/: __init__.py
mgs/diff_renderer/src/cuda/: mgs_dr_backward.h  mgs_dr_buffers.cu  mgs_dr_forward.cu
mgs_diff_renderer/: __init__.py
mgs_diff_renderer/src/: mgs_diff_renderer.cpp
mgs_diff_renderer/src/cuda/: mgs_diff_renderer.cu  mgs_dr_backward.cu  mgs_dr_backward.h  mgs_dr_buffers.cu  mgs_dr_buffers.h  mgs_dr_forward.cu  mgs_dr_forward.h  mgs_dr_foward.cu  mgs_dr_global.h
test/: test.py
