[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
    "pybind11>=2.6"
]
build-backend = "setuptools.build_meta"

[project]
name = "dgs-py"
version = "1.0.0"
description = "Moving Gaussian Splats"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
	{name = "Daniel Elwell", email = "de@true3d.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/splatsdotcom/DGS"
Repository = "https://github.com/splatsdotcom/DGS"
Issues = "https://github.com/splatsdotcom/DGS/issues"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["."]
include = ["dgs"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*" # support 3.9-3.13
skip = "*-win32 *-manylinux_i686 *-musllinux*" # skip 32-bit and pypy
build-verbosity = 1

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]